--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,9 @@
     <strong>We're sorry but expense-report doesn't work properly without JavaScript enabled. Please enable it to
         continue.</strong>
 </noscript>
-<div id="app"></div>
+<div id="app">
+    <router-view></router-view>
+</div>
 <!-- built files will be auto injected -->
 </body>
 </html>
