--- a/public/index.html
+++ b/public/index.html
@@ -8,8 +8,9 @@
           integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css"
           integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
-    <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title>expense-report</title>
+    <link rel="shortcut icon" href="../src/assets/logo.png" type="image/png">
+
+    <title>Expense report</title>
 </head>
 <body>
 <noscript>
