--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
           integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
     <link rel="shortcut icon" href="../src/assets/logo.png" type="image/png">
 
-    <title>Expense report</title>
+    <title>Classify</title>
 </head>
 <body>
 <noscript>
